1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Don't check for tclsh if --with-tcldir specified.
	Don't do version search if --with-{tcl,tk}libname was specified.

	* acobjclibs.m4: Try -lobjc -lposix4, also.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acrpath.m4.

	* acrpath.m4: New file.

1998-08-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acobjclibs.m4: Store libraries in OBJCLIBS; don't modify LIBS.

	* acguilibs.m4 (GUILIBS): Don't prevent expansion of X_EXTRA_LIBS.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4: Re-evaluate directories before testing for files.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add aclinkflags.m4.

	* aclinkflags.m4: New file.

1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acexesuffix.m4 and acguilibs.m4.
	
	* acexesuffix.m4, acguilibs.m4: New files.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acinstall.m4.

	* acinstall.m4: New file.

1998-08-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Loop over BLT, BLT8.0 and BLT80
	as possible libraries names.

	* acfind.m4 (md_FIND_LIB): Re-evaluate directory variable before 
	using it to check the library.
	(md_FIND_INCLUDE): Likewise.

	* acffi.m4: Re-evaluate directory variable before using it to
	check for the presence of libffi.{so,a}.  Use same value for
	checking ffi.h.  Likewise for avcall.

1998-08-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Use (unexpanded) ${ffidir} not ${dir}.

1998-08-12  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4 (al_SWARM_LOAD): Search for config.swarm in
	$(swarmdir)/etc/swarm not $(swarmdir)/etc.
	
1998-08-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Assign to ffidir even when ffcall is specified.

	* acbuiltinapply.m4, acobjcmalloc.m4: New files.
