@@ -1,7 +1,13 @@
+1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* actcltk.m4 (md_FIND_TCL): New macro -- split out use of tclsh to
+	find prefix, content removed from md_FIND_TCL_HEADERS.
+	Add tcldir, if any to front of path so the right tclsh can be run.
+
 1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* actcltk.m4: Don't check for tclsh if --with-tcldir specified.
-	Don't do version search if --with-{tcl,tk}libname was specified.
+	* actcltk.m4: Don't do version search if --with-{tcl,tk}libname
+	was specified.
 
 	* acobjclibs.m4: Try -lobjc -lposix4, also.
 
